@@ -1,3 +1,7 @@
+2003-08-12  John Levon  <levon@movementarian.org>
+
+	* pp/opreport.cpp: small trivialities
+
 2003-08-12  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* libregex/stl.pat.in: minor fix/improvments
